<resources>
    <string name="app_name">Adoptame</string>

    <string name="login_name_tv">Usuario</string>
    <string name="login_name_et">Ingresar usuario</string>
    <string name="login_password_tv">Password</string>
    <string name="login_password_et">Ingresar password</string>
    <string name="login_bt">LOGIN</string>

    <string name="signup_bt">REGISTRAR</string>

    <string name="list_welcome_message">Bienvenido:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="signup_tv">Registrarse</string>

    <string name="pref_config_simple">Configuracion de estilo</string>
    <string name="pref_config_advance">Configuracion avanzada</string>

    <string name="pref_sound">Encender sonido</string>
    <string name="pref_edit">Editar Items</string>

    <string name="pref_language">Idioma</string>
    <string name="pref_background">Color de fondo</string>
    <string name="pref_text_style">Tipo de fuente</string>
    <string name="pref_text_color">Color de texto</string>
    <string name="pref_text_size">Tamaño de texto</string>

    <string name="tittle_edit">Complete los campos que quiere editar</string>
    <string name="name_edit">Nombre</string>
    <string name="age_edit">Edad</string>
    <string name="details_edit">Detalles</string>

    <string name="edit_button">Realizar cambios</string>


</resources>
