<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_config_simple">
        <ListPreference
            android:defaultValue="#FFFFFF"
            android:entries="@array/back_color_entries"
            android:entryValues="@array/back_color_values"
            android:key="pref_background"
            android:title="@string/pref_background" />
        <MultiSelectListPreference
            android:defaultValue="@array/text_style_entries"
            android:entries="@array/text_style_entries"
            android:entryValues="@array/text_style_values"
            android:key="pref_text_style"
            android:title="@string/pref_text_style" />
        <ListPreference
            android:defaultValue="#FFFFFF"
            android:entries="@array/text_color_entries"
            android:entryValues="@array/text_color_values"
            android:key="pref_text_color"
            android:title="@string/pref_text_color" />
        <EditTextPreference
            android:defaultValue="14"
            android:key="pref_text_size"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:title="@string/pref_text_size" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_config_advance">


    </PreferenceCategory>
</PreferenceScreen>